Edited wiki page through web user interface.

--- a/wiki/LinkedData.wiki
+++ b/wiki/LinkedData.wiki
@@ -33,6 +33,20 @@ The `<from>` element is the test that this is a URI.
 
 The `<set>` action sets a parm named "service" to "APP", signaling to the server that it has gotten an `AtomPub` request and should expect to strip the SRU response wrapper off the outbound response and return just the bare record in the response.  (It used to be that I would accept one of these URIs and return and SRU response with the record embedded.  I decided that that was bad behavior and now return only the record the client requested.  If they wanted and SRU response, they'd have asked for one.)
 
-You can also `<set>` a "`ContentType`" parameter.  Normally, the server sets the `ContentType` in the reponse to "text/xml", but you can override that with something like "application/rdf+xml" by setting that `ContentType` parm.
-
 The `<to>` element makes the SRU request out of the URI.  In this case, all it has to do it create the query parm of the SRU request and everything else will have appropriate defaults to return the record.  See the later example for how to ask for non-default forms of the record.
+
+But...
+
+This assumes that you want the default record schema to be what is returned by the generic URI.  My experience is that the generic URI should return HTML, unless content negotiation causes you to want to return something else.  So, how can we get the generic URI to return HTML?
+
+First, you have to tell the SRU server that you want the HTML version of the record to be returned.  That assumes that HTML is one of the record schemas you support.  So, let's assume that you have such a record schemas and that its name is "HTML".  Then the `<to>` element becomes:
+{{{
+        <to>/search?query=local.viafID+exact+%22$1%22&amp;recordSchema=HTML</to>
+}}}
+
+But...
+
+The default `ContentType` returned by the SRU server is text/xml.  We want to tell the client that we are returning text/html or application/xhtml.  We can do this by using the `<set>` element to add a "`ContentType`" parameter.  So, we'll add this to our rule:
+{{{
+        <set name="`ContentType`">text/html</set>
+}}}
