--- a/wiki/SrwServerProps.wiki
+++ b/wiki/SrwServerProps.wiki
@@ -28,6 +28,22 @@ index.html=databases.html
 }}}
 ===SRU Input Parameter Extensions===
 
+SRU input parameter extensions take the form:
+{{{
+extension.<sru-parm>=<srw-element>
+extension.<srw-element>.namespace=<srw-element-namespace>
+}}}
+
+For instance, to request a restrictor summary (a local version of facets) I add this to my SRWServer.props file:
+{{{
+extension.x-info-14-restrictorSummary=restrictorSummary
+extension.restrictorSummary.namespace=info:srw/extension/14/restrictorSummary
+}}}
+
+The value for the namespace is pretty much meaningless, so make up your own URL.
+
+See the separate document SRUInputParameterExtensions for information on how to access this parameter within your code.
+
 ==Databases==
 ===default.database===
 ===Individual Databases===
