--- a/wiki/SRUInputParameterExtensions.wiki
+++ b/wiki/SRUInputParameterExtensions.wiki
@@ -5,9 +5,14 @@
 Add your content here.
 
 
-= Details =
+= Defining Local SRU Parameters=
 
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
+SRU input parameter extensions take the form:
+
+extension.<sru-parm>=<srw-element>
+extension.<srw-element>.namespace=<srw-element-namespace>
+For instance, to request a restrictor summary (a local version of facets) I add this to my SRWServer.props file:
+
+extension.x-info-14-restrictorSummary=restrictorSummary
+extension.restrictorSummary.namespace=info:srw/extension/14/restrictorSummary
+The value for the namespace is pretty much meaningless, so make up your own URL.
