Edited wiki page SRWFileSystemDatabaseConfiguration through web user interface.

--- a/wiki/SRWFileSystemDatabaseConfiguration.wiki
+++ b/wiki/SRWFileSystemDatabaseConfiguration.wiki
@@ -14,11 +14,15 @@ Create an entry in your SRWServer.props file for the new database:
     db.xxx.home=c:/f-drive/dbs/xxx/
     db.xxx.configuration=SRWDatabase.props
 
-Determine what webapp is going to expose your URIs and add the urlrewrite patterns that will take care of your RealWorldObjects (303 redirects) and your generic objects (redirects to SRW searches with Service=APP set).
+Determine what webapp is going to expose your URIs and add to urlrewrite.xml the patterns that will take care of your RealWorldObjects (303 redirects) and your generic objects (redirects to SRW searches with Service=APP set).
 {{{
+<?xml version="1.0" encoding="utf-8"?>
+<!DOCTYPE urlrewrite PUBLIC "-//tuckey.org//DTD UrlRewrite 2.6//EN"
+        "http://tuckey.org/res/dtds/urlrewrite2.6.dtd">
+<urlrewrite>
     <rule>
         <note>Send a 303 (SC_SEE_ALSO_REDIRECT) for Real World Objects</note>
-        <from>^/([0-9]+)$</from>
+        <from>^/([a-z]+)$</from>
         <to type="seeother-redirect">$1/</to>
         </rule>
         
@@ -27,13 +31,14 @@ Determine what webapp is going to expose your URIs and add the urlrewrite patter
             convert URI to SRW search
             </note>
         <condition type="method">GET</condition>
-        <from>^/([0-9]+)/$</from>
+        <from>^/([a-z]+)/$</from>
         <set name="service">APP</set>
         <to>/srw/search/xxx?query=oai.identifier+exact+%22$1.rdf%22</to>
         </rule>
+    </urlrewrite>
 }}}
 
-The second rule above would convert the URI /xxx/123/ to a search for a file with the name 123.rdf.  A more complicated name (like bogus_record_number_123.rdf) could be accommodated with a simple change to the `<to>` rule:
+The second rule above would convert the URI /xxx/abc/ to a search for a file with the name abc.rdf.  A more complicated name (like bogus_record_number_abc.rdf) could be accommodated with a simple change to the `<to>` rule:
 {{{
         <to>/srw/search/xxx?query=oai.identifier+exact+%22bogus_record_number_$1.rdf%22</to>
 }}}
