Edited wiki page Access2010Talk through web user interface.

--- a/wiki/Access2010Talk.wiki
+++ b/wiki/Access2010Talk.wiki
@@ -22,7 +22,13 @@ Subversion client
 Bounce your tomcat.  If everything has worked right, then this URL should get you our trivial SRU interface to date faux database that returns the same record no matter what search you do. http://localhost:8080/SRW/search/test (Adjust the port number as necessary if you did not accept the default tomcat port of 8080.)
 <br/>
 == Bring up database ==
-  Put some MarcXML records in a directory.  (The service will work with any XML, but I'm using MarcXML for this demonstration.)  I got some LCNAF records from this SRW server: http://alcme.oclc.org/srw/search/lcnaf.  Search for something amusing (I used my last name).  If you do a "view source" on the response, you'll see MarcXML records in the response.  Cut out individual records from that response and store them as separate files in the directory you picked.  Choose some content in the record to be used as the filename.  That filename (with suitable filtering) will become the URI for the record, so choose wisely.  I chose the LCCN in the 010$a field. (You can just download the two records I stored on GoogleCode if the above seems too complicated right now.)<br/>
+  Put some MarcXML records in a directory.  (The service will work with any XML, but I'm using MarcXML for this demonstration.)  I got some LCNAF records from this SRW server: http://alcme.oclc.org/srw/search/lcnaf.  Search for something amusing (I used my last name).  If you do a "view source" on the response, you'll see MarcXML records in the response.  Cut out individual records from that response and store them as separate files in the directory you picked.  Choose some content in the record to be used as the filename.  That filename (with suitable filtering) will become the URI for the record, so choose wisely.  I chose the LCCN in the 010$a field. (You can just download the two records I stored on `GoogleCode` if the above seems too complicated right now.)<br/>
   Download the SRWFileSystemDatabase.template.SRWDatabase.props file into the directory with your XML records.  Rename the database SRWDatabase.props.  Adjust the filenameFilter to only select your XML files from the directory.
-  Edit `<tomcat>`/webapps/SRW/WEB-INF/classes/SRWServer.props.  Uncomment the three lines for the SRWFileSystemDatabase.  To change the database name, change the second part of the property name (e.g. change 'lcnaf' to 'MyTest').  Change the location of the database home to point at the directory with your records and SRWDatabase.props.<br/>
-  Bounce your tomcat and try http://localhost:8080/SRW/search/lcnaf (adjusted appropriately for your environment.)  If you select "identifier" from the pulldown list under "Browse" and then click the "Browse" button, you should see a list of your XML file names.  Click on one and you should see the file's contents.
+  Edit `<tomcat>`/webapps/SRW/WEB-INF/classes/SRWServer.props.  Uncomment the three lines for the SRWFileSystemDatabase.  To change the database name, change the second part of the property name (e.g. change 'lcnaf' to '`MyTest`').  Change the location of the database home to point at the directory with your records and SRWDatabase.props.<br/>
+  Bounce your tomcat and try http://localhost:8080/SRW/search/lcnaf (adjusted appropriately for your environment.)  If you select "identifier" from the pulldown list under "Browse" and then click the "Browse" button, you should see a list of your XML file names.  Click on one and you should see the file's contents.<br/>
+== Decide on your URI pattern ==
+I decided to expose the records as http://localhost:8080/lcnaf/`<recordID>`.  We need to do some work to make that happen.
+  Stop your tomcat<br/>
+  mv `<tomcat>`/webapps/SRW `<tomcat>`/webapps/lcnaf<br/>
+We now have a framework where the SRW server will respond to URLs that begin with "lcnaf".  But, the tomcat framework needs a URL pattern beyond the "lcnaf" context to invoke the SRW server and even then the SRW server is expecting to see an CQL query, not a bare recordID.  How do we bridge that gap?  With a URL rewrite filter.  I use the OpenSource urlrewritefilter.
+  Edit `<tomcat>`/webapps/lcnaf/WEB-INF/urlrewrite.xml
