--- a/wiki/Access2010Talk.wiki
+++ b/wiki/Access2010Talk.wiki
@@ -13,7 +13,7 @@ Ant 1.7 or higher
 Subversion client
 
 = Instructions =
-==Download oclcsrw, build and deploy==
+== Download oclcsrw, build and deploy ==
   svn checkout http://oclcsrw.googlecode.com/svn/trunk/ oclcsrw<br/>
   cd oclcsrw<br/>
   ant<br/>
@@ -26,9 +26,16 @@ Bounce your tomcat.  If everything has worked right, then this URL should get yo
   Download the SRWFileSystemDatabase.template.SRWDatabase.props file into the directory with your XML records.  Rename the database SRWDatabase.props.  Adjust the filenameFilter to only select your XML files from the directory.
   Edit `<tomcat>`/webapps/SRW/WEB-INF/classes/SRWServer.props.  Uncomment the three lines for the SRWFileSystemDatabase.  To change the database name, change the second part of the property name (e.g. change 'lcnaf' to '`MyTest`').  Change the location of the database home to point at the directory with your records and SRWDatabase.props.<br/>
   Bounce your tomcat and try http://localhost:8080/SRW/search/lcnaf (adjusted appropriately for your environment.)  If you select "identifier" from the pulldown list under "Browse" and then click the "Browse" button, you should see a list of your XML file names.  Click on one and you should see the file's contents.<br/>
+
 == Decide on your URI pattern ==
-I decided to expose the records as http://localhost:8080/lcnaf/`<recordID>`.  We need to do some work to make that happen.
+I decided to expose the records as `http://localhost:8080/lcnaf/<recordID>`.  We need to do some work to make that happen.
   Stop your tomcat<br/>
   mv `<tomcat>`/webapps/SRW `<tomcat>`/webapps/lcnaf<br/>
-We now have a framework where the SRW server will respond to URLs that begin with "lcnaf".  But, the tomcat framework needs a URL pattern beyond the "lcnaf" context to invoke the SRW server and even then the SRW server is expecting to see an CQL query, not a bare recordID.  How do we bridge that gap?  With a URL rewrite filter.  I use the OpenSource urlrewritefilter.
-  Edit `<tomcat>`/webapps/lcnaf/WEB-INF/urlrewrite.xml
+We now have a framework where the SRW server will respond to URLs that begin with "lcnaf".  But, the tomcat framework needs a URL pattern after the "lcnaf" context to invoke the SRW server and even then the SRW server is expecting to see an CQL query, not a bare recordID.  How do we bridge that gap?  How do we turn /lcnaf/no12345 into /lcnaf/search/lcnaf?query=identifier=no12345?  With a URL rewrite filter.  I use the OpenSource urlrewritefilter.
+  Edit `<tomcat>`/webapps/lcnaf/WEB-INF/urlrewrite.xml.  The file came preconfigured to turn URIs of the form /([a-z0-9]+)/ into /search/lcnaf?query=identifier=%22$1%22.  If you've chosen a different URI pattern, then adjust the configuration file appropriately. If you've named your database something other than lcnaf, then you'll need to change that part of the rule also.<br/>
+
+== SeeOther Redirect ==
+The 303 (SeeOther) redirect from a URI is the mechanism that tells Linked Data aware applications that they have a RealWorldObject in their hands and that the object of the redirect should support content negotiation for RDF.<br/>
+The redirect is handled by the urlrewrite filter and came preconfigured in the urlrewrite.xml file.  If you chose a different URI pattern, then you may need to change the regex pattern in the configuration file.  As distributed, it will send URIs of the form /([a-z0-9]+) to /$1/.  (e.g. /no12345 to /no12345/)
+== Content Negotiation ==
+== Bypass Content Negotiation ==
