--- a/wiki/Access2010Talk.wiki
+++ b/wiki/Access2010Talk.wiki
@@ -41,7 +41,7 @@ Subversion client
   The file came preconfigured to turn URIs of the form /([a-z0-9]+)/ into /search/lcnaf?query=identifier=%22$1%22.  If you've chosen a different URI pattern, then adjust the configuration file appropriately. If you've named your database something other than lcnaf, then you'll need to change that part of the rule also.<br/>
 
 == `SeeOther` Redirect ==
-  The 303 (`SeeOther`) redirect from a URI is the mechanism that tells Linked Data aware applications that they have a RealWorldObject in their hands and that the object of the redirect should support content negotiation for RDF.<br/>
+  The 303 (`SeeOther`) redirect from a URI is the mechanism that tells Linked Data aware applications that they have a `RealWorldObject` in their hands and that the object of the redirect should support content negotiation for RDF.<br/>
 
   The redirect is handled by the urlrewrite filter and came preconfigured in the urlrewrite.xml file.  If you chose a different URI pattern, then you may need to change the regex pattern in the configuration file.  As distributed, it will send URIs of the form /([a-z0-9]+) to /$1/.  (e.g. /no12345 to /no12345/)<br/>
 
@@ -55,4 +55,11 @@ Subversion client
   The server-side rendering requires a trick.  The server is going to render the XML just like the browser would.  But the browser gets URLs that point it to the stylesheets it needs.  The server is going to have to use the same mechanism to fetch those stylesheets.  The browser knows what port the server is listening on, but I've found no way for a servlet to find out what port its tomcat is listening on.  So, I've added a parm in the web.xml that tells the SRW servlet what port number to use to fetch stylesheets.<br/>
   Edit `<tomcat>`/webapps/lcnaf/WEB-INF/web.xml.  Uncomment the portNumber parameter.  Change the value of 8080 to whatever port your tomcat is listening on.<br/>
 
+  If you ask for one of those records again and view the source, you'll see HTML now.
+
+== Support application/rdf+xml as a media type ==
+  To support media types beyond HTML and the native XML, all we need is a stylesheet to generate the new content.  If we want to support RDF, then we need a stylesheet that converts our native XML to RDF.  In the case of our MarcXML, the Library of Congress has already written a stylesheet to produce RDF.<br/>
+  Download http://www.loc.gov/standards/marcxml/xslt/MARC21slim2RDFDC.xsl and put it in your database directory.
 == Bypass Content Negotiation ==
+  When a server does Content Negotiation, it is supposed to give the client a URL that it can use to find the content directly (without Content Negotiation).  That URL is supposed to be returned in the Content-Location header of the server response.  We can do that too.<br/>
+  Edit the SRWDatabase.props file for your database.<br/>
