--- a/wiki/Access2010Talk.wiki
+++ b/wiki/Access2010Talk.wiki
@@ -59,7 +59,9 @@ Subversion client
 
 == Support application/rdf+xml as a media type ==
   To support media types beyond HTML and the native XML, all we need is a stylesheet to generate the new content.  If we want to support RDF, then we need a stylesheet that converts our native XML to RDF.  In the case of our MarcXML, the Library of Congress has already written a stylesheet to produce RDF.<br/>
-  Download http://www.loc.gov/standards/marcxml/xslt/MARC21slim2RDFDC.xsl and put it in your database directory.
+  Download http://www.loc.gov/standards/marcxml/xslt/MARC21slim2RDFDC.xsl and put it in your database directory.<br/>
+  Edit the SRWDatabase.props file for your database. Find the lines that define the RDF media type and uncomment them.<br/>
+
 == Bypass Content Negotiation ==
   When a server does Content Negotiation, it is supposed to give the client a URL that it can use to find the content directly (without Content Negotiation).  That URL is supposed to be returned in the Content-Location header of the server response.  We can do that too.<br/>
   Edit the SRWDatabase.props file for your database.<br/>
