--- a/wiki/Access2010Talk.wiki
+++ b/wiki/Access2010Talk.wiki
@@ -38,14 +38,14 @@ Subversion client
   This sets the base context of the URI to lcnaf.  This can be slightly confusing as we now have a context named "lcnaf" and a database named "lcnaf", but this typically isn't a problem.  You can choose different names for the context and database.<br/>
   We now have a framework where the SRW server will respond to URLs that begin with "lcnaf".  But, the tomcat framework needs a URL pattern after the "lcnaf" context to invoke the SRW server and even then the SRW server is expecting to see an CQL query, not a bare recordID.  How do we bridge that gap?  How do we turn /lcnaf/no12345 into /lcnaf/search/lcnaf?query=identifier=no12345?  With a URL rewrite filter.  I use the OpenSource urlrewritefilter.
   Edit `<tomcat>`/webapps/lcnaf/WEB-INF/urlrewrite.xml<br/>
-  The file came preconfigured to turn URIs of the form /([a-z0-9]+)/ into /search/lcnaf?query=identifier=%22$1%22.  If you've chosen a different URI pattern, then adjust the configuration file appropriately. If you've named your database something other than lcnaf, then you'll need to change that part of the rule also.<br/>
+  The file came preconfigured to turn URIs of the form /(`[a-z0-9]`+)/ into /search/lcnaf?query=identifier=%22$1%22.  If you've chosen a different URI pattern, then adjust the configuration file appropriately. If you've named your database something other than lcnaf, then you'll need to change that part of the rule also.<br/>
   Bounce your tomcat server<br/>
   http://localhost:8080/lcnaf/no201063790<br/>
 
 == `SeeOther` Redirect ==
   The 303 (`SeeOther`) redirect from a URI is the mechanism that tells Linked Data aware applications that they have a `RealWorldObject` in their hands and that the object of the redirect should support content negotiation for RDF.<br/>
 
-  The redirect is handled by the urlrewrite filter and came preconfigured in the urlrewrite.xml file.  If you chose a different URI pattern, then you may need to change the regex pattern in the configuration file.  As distributed, it will send URIs of the form /([a-z0-9]+) to /$1/.  (e.g. /no12345 to /no12345/)<br/>
+  The redirect is handled by the urlrewrite filter and came preconfigured in the urlrewrite.xml file.  If you chose a different URI pattern, then you may need to change the regex pattern in the configuration file.  As distributed, it will send URIs of the form /(`[a-z0-9]`+) to /$1/.  (e.g. /no12345 to /no12345/)<br/>
 
 == Content Negotiation ==
   Content Negotiation is handled by the SRW server and configured separately for each database in its SRWDatabase.props file.<br/>
