--- a/wiki/Access2010Talk.wiki
+++ b/wiki/Access2010Talk.wiki
@@ -5,9 +5,6 @@
 Instructions on how to build a simple Linked Data system for records in a directory.
 
 
-= Links =
-  [http://www.oclc.org/research/events/taichi.htm#ld Linked Data Webinar]
-
 = Prerequisites =
 
   JDK 1.6 or higher (_might_ work with 1.5)<br/>
@@ -95,5 +92,10 @@ Instructions on how to build a simple Linked Data system for records in a direct
 == Teaser ==
   The observant reader will have noticed references to a URL parameter named "service" with a value of "APP".  You will also have noticed tests in the rewrite rules that are conditional on the HTTP method being "GET".  What's with that?<br/>
 
-  Our SRW server support the AtomPub protocol.  Databases need to implement a few new methods to support adding, replacing and deleting records and you can do AtomPub record management to your Linked Data collection.  (So far, I've only done that for my internal database system, Pears, but adding it to others, like SRWFileSystemDatabase, would be simple.)
+  Our SRW server support the AtomPub protocol.  Databases need to implement a few new methods to support adding, replacing and deleting records and you can do AtomPub record management to your Linked Data collection.  (So far, I've only done that for my internal database system, Pears, but adding it to others, like SRWFileSystemDatabase, would be simple.)<br/>
+
+= Links =
+  [http://www.oclc.org/research/events/taichi.htm#ld Linked Data Webinar]
+
+
   
