Edited wiki page WikiHomePage through web user interface.

--- a/wiki/WikiHomePage.wiki
+++ b/wiki/WikiHomePage.wiki
@@ -14,3 +14,4 @@ Complete information on the SRW/SRU standard can be found at the maintenance age
 
 [InstallationInstructions]
 [ConfigurationFiles]
+[WriteYourOwnDatabaseInterface]
